<resources>
    <string name="app_name">Design Profile</string>
    <string name="text_email_test">user@skypremium.com</string>
    <string name="text_label_salutation">SALUTATION</string>
    <string name="text_first_name_test">Jane</string>
    <string name="text_label_first_name">FIRST NAME</string>
    <string name="text_label_last_name">LAST NAME</string>
    <string name="text_label_gender">GENDER</string>
    <string name="text_label_date_of_birth">DATE OF BIRTH</string>
    <string name="text_last_name_test">Smith</string>
    <string name="text_date_of_birth">12/12/90</string>
    <string name="text_label_country_code">COUNTRY CODE</string>
    <string name="text_label_contract_number">CONTRACT NUMBER</string>
    <string name="text_contract_number_test">87878787</string>
    <string name="text_label_nationality">NATIONALITY</string>
    <string name="text_label_country">COUNTRY</string>
    <string name="text_label_facebook">FACEBOOK</string>
    <string name="text_facebook_test">Jane,smith</string>
    <string name="text_telegram_test">\@Jane.smith</string>
    <string name="text_label_telegram">TELEGRAM</string>
    <string name="text_istagram_test">\@Jane.smith</string>
    <string name="text_label_istagram">ISTAGRAM</string>
    <string name="text_button_update">Update</string>
    <string name="text_button_change_password">Change Password</string>
    <string name="text_camera">Camera</string>
    <string name="text_select_from_gallery">Select from Gallery</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_confirm_update">Confirm Update?</string>
    <string name="text_title_change_password">Change Password</string>
    <string name="text_label_current_password">CURRENT PASSWORD</string>
    <string name="text_current_password_hint">Current password</string>
    <string name="text_label_new_password">NEW PASSWORD</string>
    <string name="text_new_password_hint">New password</string>
    <string name="text_label_confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="text_confirm_new_password_hint">Confirm new password</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_hi_name_test">Hi, John</string>
    <string name="text_label_you_have">You have</string>
    <string name="text_points">Points</string>
    <string name="text_points_info_profile">13,590</string>
    <string name="text_tap_to_view_membership_card">Tap to View Membership Card</string>
    <string name="text_refer_a_friend_to_get_rewards">Refer a friend to get Rewards</string>
    <string name="text_message_refer_menu_profile">When your referral join 25 Hours menber, you\'ll enjoy benefits!</string>
    <string name="text_default">Text Test</string>
    <string name="text_account">Account</string>
    <string name="text_member_360_data">Member 360° Data</string>
    <string name="text_membership">Membership</string>
    <string name="text_my_activities">My Activities</string>
    <string name="text_my_favourites">My Favourites</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_shopping_address">Shopping Address</string>
    <string name="text_payment_details">Payment Details</string>
    <string name="text_settings">Settings</string>
    <string name="text_support">Support</string>
    <string name="text_logout">Logout</string>
    <string name="text_25_hours">25 HOURS</string>
    <string name="text_member_id_test">SG201905070001</string>
    <string name="text_label_member_id">Member ID</string>
    <string name="text_name_test">John Smith</string>
    <string name="text_member_expiry">21 Dec 2024</string>
    <string name="text_label_redeem_points">Redeem Points</string>
    <string name="text_points_test">100 Points</string>
    <string name="text_rules_redeem_points_test">*1 Point = $1</string>
    <string name="text_label_redeem">REDEEM</string>
    <string name="text_number_points_test">50</string>
    <string name="text_max">Max</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_label_membership_information">Membership Information</string>
    <string name="text_label_membership_fee">Membership Fee</string>
    <string name="text_membership_fee_test">$1,500</string>
    <string name="text_button_change_plan">Change Plan</string>
    <string name="text_button_payment_history">Payment History</string>
    <string name="text_cancel_membership">Cancel Membership</string>
    <string name="text_next_member_ship_payment_date_test">11 Jan 2023</string>
    <string name="text_label_next_member_ship_payment_date">Next Membership Payment Date</string>
    <string name="text_payment_plan_test">Annual</string>
    <string name="text_label_payment_plan">Payment Plan</string>
    <string name="text_associated_code_test">-</string>
    <string name="text_label_associated_code">Associated Code</string>
    <string name="text_label_membership_fee_payment_date">Membership Fee Payment Date</string>
    <string name="text_label_membership_end_date">Membership End Date</string>
    <string name="text_label_payment_history">Payment History</string>
    <string name="text_tag_sort_by">Sort By</string>
    <string name="text_tag_status">Status</string>
    <string name="text_tag_date_range">Date Range</string>
    <string name="text_no_order">No Orders</string>
    <string name="text_explore_shop">Explore Shop</string>
    <string name="text_reorder">Reorder</string>
    <string name="text_apply">Apply</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_number_card_test">XXXX XXXX XXXX 4693</string>
    <string name="text_order_details">Order Details</string>
    <string name="text_price_summary">Price Summary</string>
    <string name="text_subtal">Subtal</string>
    <string name="text_shipping_fee">Shipping Fee</string>
    <string name="text_gift_wrapping_fee">Gift Wrapping Fee</string>
    <string name="text_tax">Tax</string>
    <string name="text_total">Total</string>
    <string name="text_gst">Incl. Prevailing GST</string>
    <string name="text_get_invoice">Get Invoice</string>
    <string name="text_processing">Processing</string>
    <string name="text_date_order_detail_test">Order Placed: 28 February 2022</string>
    <string name="text_address_order_details_test">70A Street Name, 08-115</string>
    <string name="text_post_code_test">Singapore 346897</string>
    <string name="text_refer_a_friend">Refer a friend</string>
    <string name="text_rules_refer">Spread the good news. You are already benefitting from the many rewards of the 25 Hours membership by now, so why not inform your friends and let them enjoy the exclusive benefits as well?</string>
    <string name="text_request_refer">Start inviting your friends to 25 Hours now!</string>
    <string name="text_invite_friends">Invite Friends</string>
    <string name="text_push_notifacetions">Push Notificaticons</string>
    <string name="text_biometric_settings">Biometric Settings</string>
    <string name="text_toggle_all">Toggle All</string>
    <string name="text_description_support_inquiry_form">Get personalised help, write an inquiry form to us. We will reply within 2 to 3 working days.</string>
    <string name="text_label_subject">SUBJECT</string>
    <string name="text_label_message">Message</string>
    <string name="text_hint_message_support">Let us know we can help you</string>
    <string name="text_find_more_help">Find more help</string>
    <string name="text_call_us_test">+65 6533 0000</string>
    <string name="text_label_call_us">Call Us</string>
    <string name="text_label_email">Email</string>
    <string name="text_label_operating_hours">Operating Hours</string>
    <string name="text_operating_hours_test">Mon to Fri: 0900 to 1800 \nEve of PH: 0900 to 1300\nPH, Sat, Sun: Office Closed</string>
    <string name="text_message_protest_support">Your message is being handled by our dedicated Membership Service Consultant.\n\nWe will get in touch with you soon.\nIn the unlikely event that you do not hear from us within 3 working days, kindly contact us at:</string>
    <string name="text_button_ok">OK</string>
</resources>