<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.menuprofile.account.changepassword.ChangePasswordActivity">

    <LinearLayout
        android:layout_margin="@dimen/margin_body_to_screen_sheet_change_password"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_change_password"
            android:textSize="@dimen/text_size_title_change_pasword"
            android:textColor="@color/color_black_1"
            android:fontFamily="@font/jost_light"
            />

        <TextView
            android:fontFamily="@font/jost_regular"
            android:layout_marginTop="@dimen/margin_top_between_element_to_title_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_current_password"
            android:textSize="@dimen/text_size_label_account_profile"
            android:textColor="@color/color_gray_1"
            />

        <EditText
            android:fontFamily="@font/jost_light"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_spinner_salutation_account_profile"
            android:id="@+id/edtCurrentPassword"
            android:background="@android:color/transparent"
            android:hint="@string/text_current_password_hint"
            android:textSize="@dimen/text_size_default_account_profile"
            android:layout_marginTop="@dimen/margin_top_element_to_label_account_profile"
            android:paddingLeft="@dimen/padding_left_edittext_change_password"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_line_saperate_element"
            android:background="@color/color_gray_2"

            />

        <TextView
            android:fontFamily="@font/jost_regular"
            android:layout_marginTop="@dimen/margin_top_between_label_to_line_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_new_password"
            android:textSize="@dimen/text_size_label_account_profile"
            android:textColor="@color/color_gray_1"
            />

        <EditText
            android:fontFamily="@font/jost_light"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_spinner_salutation_account_profile"
            android:id="@+id/edtNewPassword"
            android:background="@android:color/transparent"
            android:hint="@string/text_new_password_hint"
            android:textSize="@dimen/text_size_default_account_profile"
            android:layout_marginTop="@dimen/margin_top_element_to_label_account_profile"
            android:paddingLeft="@dimen/padding_left_edittext_change_password"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_line_saperate_element"
            android:background="@color/color_gray_2"

            />

        <TextView
            android:fontFamily="@font/jost_regular"
            android:layout_marginTop="@dimen/margin_top_between_label_to_line_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_confirm_new_password"
            android:textSize="@dimen/text_size_label_account_profile"
            android:textColor="@color/color_gray_1"
            />

        <EditText
            android:fontFamily="@font/jost_light"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_spinner_salutation_account_profile"
            android:id="@+id/edtConfirmNewPassword"
            android:background="@android:color/transparent"
            android:hint="@string/text_confirm_new_password_hint"
            android:textSize="@dimen/text_size_default_account_profile"
            android:layout_marginTop="@dimen/margin_top_element_to_label_account_profile"
            android:paddingLeft="@dimen/padding_left_edittext_change_password"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_line_saperate_element"
            android:background="@color/color_gray_2"

            />

        <TextView
            android:textStyle="bold"
            android:fontFamily="@font/jost_regular"
            android:textSize="@dimen/text_size_button_account_profile"
            android:textColor="@color/white"
            android:id="@+id/btnSubmit"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_account_profile"
            android:text="@string/text_button_submit"
            android:background="@drawable/bg_button_black"
            android:layout_marginTop="@dimen/margin_top_button_to_item_change_password"
            />

        <TextView
            android:textStyle="bold"
            android:fontFamily="@font/jost_regular"
            android:textSize="@dimen/text_size_button_account_profile"
            android:textColor="@color/color_black_1"
            android:id="@+id/btnCancel"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_account_profile"
            android:text="@string/text_button_cancel"
            android:background="@drawable/bg_button_white"
            android:layout_marginTop="@dimen/margin_top_between_button_account_profile"
            />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>